# saadmk11.github.io

./: .gitignore  CNAME  README.md  index.html  llms.txt  main.js  repo_data.json
.github/workflows/: screenshot.yaml  update_profile.yaml
profile-sync/: README.md  config.py  exceptions.py  github.py  main.py  models.py  pyproject.toml  rendering.py
profile-sync/templates/: project_card.html.jinja
resume/: index.html
scripts/: update.py
